--- a/src/01入门/02两种创建虚拟DOM 方式/02js创建.html
+++ b/src/01入门/02两种创建虚拟DOM 方式/02js创建.html
@@ -9,9 +9,9 @@
   <body>
     <div id="test"></div>
     <!-- 引入库 -->
-    <script src="../React-js/react.development.js"></script>
-    <script src="../React-js/react-dom.development.js"></script>
-    <script src="../React-js/babel.min.js"></script>
+    <script src="/src/React-js/react.development.js"></script>
+    <script src="/src/React-js/react-dom.development.js"></script>
+    <script src="/src/React-js/babel.min.js"></script>
     <script type="text/javascript">
       const dom = React.createElement('h1', { id: 'title' }, React.createElement('span', {}, 'hello react'));
       ReactDOM.render(dom, document.getElementById('test'));
