--- a/src/02面向组件编程/01react中定义组件/01函数式组件.html
+++ b/src/02面向组件编程/01react中定义组件/01函数式组件.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="/src//resource/ico/favicon.ico" type="image/x-icon" />
     <title>Document</title>
   </head>
   <body>
@@ -13,20 +14,13 @@
     <script src="/src/React-js/react-dom.development.js"></script>
     <script src="/src/React-js/babel.min.js"></script>
     <script type="text/babel">
-      const data = ['Angular', 'React', 'Vue'];
-      // 创建dom
-      const dom = (
-        <div>
-          <h1>前端框架列表</h1>
-          <ul>
-            {data.map((el, index) => {
-              return <li key={index}>{el}</li>;
-            })}
-          </ul>
-        </div>
-      );
-      // 渲染dom
-      ReactDOM.render(dom, document.getElementById('test'));
+      // 创建函数式组件
+      function Demo() {
+        return <h2>我是用函数定义的组件</h2>;
+      }
+      // 渲染组件
+      ReactDOM.render(<Demo />, document.getElementById('test'));
+      // 一般用于一般组件 无状态state
     </script>
   </body>
 </html>
