--- a/src/00复习/01类.html
+++ b/src/00复习/01类.html
@@ -35,5 +35,15 @@
     const s2 = new Student('jj', 50, '毕业');
     console.log(s2);
     s2.speak();
+    class Car {
+      constructor(name, price) {
+        this.name = name;
+        this.price = price;
+        // this.wheel = 4;
+      }
+      // a = 1;
+      wheel = 4;
+    }
+    const c1 = new Car('奔驰c63', 1990000);
   </script>
 </html>
