--- a/src/01入门/01初识/test.html
+++ b/src/01入门/01初识/test.html
@@ -9,9 +9,9 @@
   <body>
     <div id="test"></div>
     <!-- 引入库 -->
-    <script src="/src/React-js/react.development.js"></script>
-    <script src="/src/React-js/react-dom.development.js"></script>
-    <script src="/src/React-js/babel.min.js"></script>
+    <script src="/React-js/react.development.js"></script>
+    <script src="/React-js/react-dom.development.js"></script>
+    <script src="/React-js/babel.min.js"></script>
     <script type="text/babel">
       const dom = <h1>hello react</h1>;
       ReactDOM.render(dom, document.getElementById('test'));
