--- a/src/01入门/03jsx语法规则/01jsx语法规则.html
+++ b/src/01入门/03jsx语法规则/01jsx语法规则.html
@@ -14,9 +14,9 @@
   <body>
     <div id="test"></div>
     <!-- 引入库 -->
-    <script src="/src/React-js/react.development.js"></script>
-    <script src="/src/React-js/react-dom.development.js"></script>
-    <script src="/src/React-js/babel.min.js"></script>
+    <script src="/React-js/react.development.js"></script>
+    <script src="/React-js/react-dom.development.js"></script>
+    <script src="/React-js/babel.min.js"></script>
     <script type="text/babel">
       const id = 'tItle';
       const data = 'heLlo reAct';
