feat: 事件处理完成

--- a/src/01入门/04jsx练习/index.html
+++ b/src/01入门/04jsx练习/index.html
@@ -9,9 +9,9 @@
   <body>
     <div id="test"></div>
     <!-- 引入库 -->
-    <script src="/src/React-js/react.development.js"></script>
-    <script src="/src/React-js/react-dom.development.js"></script>
-    <script src="/src/React-js/babel.min.js"></script>
+    <script src="../../React-js/react.development.js"></script>
+    <script src="../../React-js/react-dom.development.js"></script>
+    <script src="../../React-js/babel.min.js"></script>
     <script type="text/babel">
       const data = ['Angular', 'React', 'Vue'];
       // 创建dom
