--- a/src/02面向组件编程/01react中定义组件/01函数式组件.html
+++ b/src/02面向组件编程/01react中定义组件/01函数式组件.html
@@ -10,9 +10,9 @@
   <body>
     <div id="test"></div>
     <!-- 引入库 -->
-    <script src="/React-js/react.development.js"></script>
-    <script src="/React-js/react-dom.development.js"></script>
-    <script src="/React-js/babel.min.js"></script>
+    <script src="../../React-js/react.development.js"></script>
+    <script src="../../React-js/react-dom.development.js"></script>
+    <script src="../../React-js/babel.min.js"></script>
     <script type="text/babel">
       // 创建函数式组件
       function Demo() {
