--- a/src/02面向组件编程/02组件属性/03组件属性props基本使用.html
+++ b/src/02面向组件编程/02组件属性/03组件属性props基本使用.html
@@ -10,9 +10,9 @@
   <body>
     <div id="test"></div>
     <!-- 引入库 -->
-    <script src="/React-js/react.development.js"></script>
-    <script src="/React-js/react-dom.development.js"></script>
-    <script src="/React-js/babel.min.js"></script>
+    <script src="../../React-js/react.development.js"></script>
+    <script src="../../React-js/react-dom.development.js"></script>
+    <script src="../../React-js/babel.min.js"></script>
     <script type="text/babel">
       class Person extends React.Component {
         constructor(props) {
