--- a/src/02面向组件编程/02组件属性/07函数式组件使用props.html
+++ b/src/02面向组件编程/02组件属性/07函数式组件使用props.html
@@ -12,11 +12,11 @@
     <div id="test1"></div>
     <div id="test2"></div>
     <!-- 引入库 -->
-    <script src="/React-js/react.development.js"></script>
-    <script src="/React-js/react-dom.development.js"></script>
-    <script src="/React-js/babel.min.js"></script>
+    <script src="../../React-js/react.development.js"></script>
+    <script src="../../React-js/react-dom.development.js"></script>
+    <script src="../../React-js/babel.min.js"></script>
     <!-- 对组件标签属性进行限制 -->
-    <script src="/React-js/prop-types.js"></script>
+    <script src="../../React-js/prop-types.js"></script>
     <script type="text/babel">
       function speak() {
         console.log('我来自德州');
